# shiyishang-agent

./: .gitignore  LICENSE  README.md  config.example.yaml  config.yaml  pyproject.toml  start_agent.bat
PLAN/: 世一上Agent框架搭建计划.md  世一上_补充版.md
lore/: README.md  enemies.md  quotes_origin.md
probes/: dialogue_smoke.py
shiyishang_agent/: __init__.py  agent.py  cli.py  config.py  history.py  models.py  persona.py
shiyishang_agent/providers/: __init__.py  anthropic.py  base.py  http.py  openai_compatible.py
shiyishang_agent/skills/: loader.py
shiyishang_agent/tools/: __init__.py  common.py  esports.py  files.py  python_run.py  weather.py  web.py
skills/user_skills/shiyishang/: SKILL.md
tests/: test_agent.py  test_config.py  test_esports.py  test_history_persona_skills.py  test_providers.py  test_tools.py
